db metadata layer (cleanup / component visibility)